--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -10,3 +10,25 @@
     import 'relative/path/to/stylesheet.scss';
 
 */
+.semaforo{
+    background: black;
+    padding: 10px;
+    display: inline-block;
+    margin: auto;
+    border-radius: 20px;
+    
+}
+.light{
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+   
+    background-color: gainsboro;
+}
+.red{background: red;}
+.amarilla{background: yellow;}
+.verde{background: green;}
+
+.glow{
+    box-shadow: 0px 0px 9px 4px gainsboro;
+}
